--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="valor">Valor:</string>
     <string name="confirmar">Confirmar</string>
     <string name="listar">Listar</string>
+    <string name="enviar">Enviar</string>
 </resources>
